[package]
name = "sifive-plic"
version = "1.0.0"
edition = "2021"
description = "A crate to assist in the usage of the PLIC."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdt = "0.1.5"
log = "0.4.17"
volatile = { git = "https://github.com/archaic-archea/volatile" }
